# CMPE-273

./: Assignment2  README.md
Assignment1/: assignment1.py
Assignment2/: Readme.md  TestClient.py  master.py  replicator.proto  replicator_pb2.py  replicator_pb2_grpc.py  slave.py
Lab1/: server.py
Lab1/lab1.db/: IDENTITY  LOG  LOG.old.1507357532479672  LOG.old.1507359258722345  LOG.old.1507403370670802  LOG.old.1507403494264403  LOG.old.1507415967428862
Lab1/test.db/: 000004.sst  IDENTITY  LOG.old.1507263397761246  MANIFEST-000005  OPTIONS-000008
SVCC/SVCC-ExtraCredit/AvlTree/: AvlTree.cpp  AvlTree.h  BSTApp.cpp  BinaryNode.cpp  BinaryNode.h  BinarySearchTree.cpp  BinarySearchTree.h  BinaryTreeChecker.cpp  BinaryTreeChecker.h  BinaryTreePrinter.cpp  BinaryTreePrinter.h  CMakeLists.txt
lab1.db/: LOG.old.1507357853478119  LOG.old.1507357976190457  LOG.old.1507358260675079  LOG.old.1507359108837963  LOG.old.1507359318282793
test.db/: LOG
